# the_matrix_public

./: .gitignore  README.md  cloud plan  compression_results  gpu instance cost.bak  gpu instance cost.xlsx  precision.c  snapshots.sql  time estimates
the_matrix/: CMakeLists.txt  Cargo.toml  Makefile  benchmark_results  check.sh  crate_sizes.sh  rustfmt.toml  setup.sh  test.sh  the_architect_settings.yaml
the_matrix/bevy/: Cargo.toml
the_matrix/bevy/src/: event.rs  lib.rs  task.rs
the_matrix/compression_demo/: Cargo.toml
the_matrix/compression_demo/src/: main.rs
the_matrix/config/: Cargo.toml
the_matrix/config/src/: lib.rs
the_matrix/db/: .env  Cargo.toml  core.sql
the_matrix/db/core/: dba.sql  file.sql  public.sql
the_matrix/db/src/: lib.rs
the_matrix/dozer/: Cargo.toml
the_matrix/dozer/src/: lib.rs  loaders.rs  provider.rs
the_matrix/dozer/src/provider/: hlcv_provider.rs
the_matrix/graph/: Cargo.toml
the_matrix/graph/src/: lib.rs
the_matrix/iaas/: Cargo.toml
the_matrix/iaas/src/: azure.rs  lib.rs  mysql.rs  oracle.rs
the_matrix/iaas/src/azure/: archive.rs  cosmos_db.rs
the_matrix/iaas/src/mysql/: models.rs  schema.rs
the_matrix/macros/: Cargo.toml
the_matrix/macros/src/: lib.rs
the_matrix/matrix/: Cargo.toml
the_matrix/matrix/src/: main.rs
the_matrix/matrix_core/: Cargo.toml
the_matrix/matrix_core/src/: agents.rs  error.rs  event.rs  lib.rs
the_matrix/matrix_core/src/agents/: data_agents.rs  network_agent.rs  network_agents.rs  user_agent.rs
the_matrix/matrix_core/src/agents/network_agent/: client.rs  exchange_state.rs  websocket.rs
the_matrix/matrix_core/src/agents/network_agents/: bitmex_agent.rs  mock_network_agent.rs
the_matrix/matrix_core/src/agents/network_agents/mock_network_agent/: mock_exchange.rs
the_matrix/merovingian/: Cargo.toml
the_matrix/merovingian/src/: account.rs  candles.rs  candles_builder.rs  compression.rs  error.rs  hlcv.rs  lib.rs  minable_models.rs  non_minable_models.rs  order.rs  output_reader.rs  structs.rs  variable.rs
the_matrix/morpheus/: Cargo.toml
the_matrix/morpheus/src/: main.rs
the_matrix/mouse/: Cargo.toml
the_matrix/mouse/src/: definitions.rs  error.rs  ext.rs  handlers.rs  helpers.rs  lib.rs  log.rs  macros.rs  mem.rs  num.rs  sync.rs  thread_pool.rs  time.rs  traits.rs
the_matrix/mouse/src/macros/: vtable.rs
the_matrix/nebuchadnezzar/: Cargo.toml
the_matrix/nebuchadnezzar/apis/birake/: Cargo.toml
the_matrix/nebuchadnezzar/apis/birake/src/: definitions.rs  lib.rs  requests.rs
the_matrix/nebuchadnezzar/apis/bitmex/: Cargo.toml
the_matrix/nebuchadnezzar/apis/bitmex/src/: client.rs  definitions.rs  error.rs  lib.rs  models.rs  requests.rs  websocket.rs
the_matrix/nebuchadnezzar/apis/bitmex/src/websocket/: command.rs  message.rs
the_matrix/nebuchadnezzar/nebuchadnezzar_core/: Cargo.toml
the_matrix/nebuchadnezzar/nebuchadnezzar_core/src/: client.rs  commands.rs  definitions.rs  error.rs  lib.rs  paginators.rs  requests.rs  schema.rs  serializers.rs  signatures.rs  websocket.rs
the_matrix/nebuchadnezzar/nebuchadnezzar_macros/: Cargo.toml
the_matrix/nebuchadnezzar/nebuchadnezzar_macros/src/: lib.rs
the_matrix/nebuchadnezzar/src/: lib.rs
the_matrix/sync/: Cargo.toml
the_matrix/sync/src/: main.rs
the_matrix/tank/: Cargo.toml
the_matrix/tank/src/: app.rs  colors.rs  flex.rs  imgui_plugin.rs  index.html  main.rs  niobe.rs  render.rs  scale.rs  style.css  winit_plugin.rs
the_matrix/tank/src/niobe/: big_data.rs
the_matrix/tank/src/render/: drawer.rs  shaders.rs  utils.rs
the_matrix/tank/src/render/pipelines/d2/: line.rs  line_strip.rs  parallel_coordinates.rs
the_matrix/tank/src/render/shaders/fragment/: color_forward.wgsl  mod.rs  sampled.wgsl
the_matrix/tank/src/render/shaders/vertex/: basic.wgsl  line.wgsl  mod.rs  parallel_coordinates.wgsl
the_matrix/test_helper/: Cargo.toml
the_matrix/test_helper/src/: lib.rs
the_matrix/the_architect/: Cargo.toml
the_matrix/the_architect/src/: main.rs
the_matrix/zion/: Cargo.toml
the_matrix/zion/src/: db.rs  definitions.rs  error.rs  hello.rs  lib.rs  listener.rs  macros.rs  reactor.rs  schedule.rs  spec.txt  system.rs  topic.rs  workflow.rs
the_matrix/zion/src/schema/: schema.sql
the_matrix/zion/src/system/: registry.rs
the_matrix/zion/src/topic/: bevy_topic.rs  mem.rs  tmp.rs
the_matrix/zion_macros/: Cargo.toml
the_matrix/zion_macros/src/: lib.rs
