[package]
name = "config"
version = "0.1.0"
authors = ["Stock84-dev <leontk8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mouse = { path = "../mouse" }
merovingian = { path = "../merovingian" }
lazy_static = "1.4.0"
serde_yaml = "0.8.17"
serde = "1.0.125"
chrono = "0.4.19"
