[package]
name = "iaas"
version = "0.1.0"
authors = ["Stock84-dev <leontk8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
test = []

[dependencies]
config = { path = "../config" }
merovingian = { path = "../merovingian" }
mouse = { path = "../mouse" }
macros = { path = "../macros" }
speedy = { path = "../../deps/speedy" }
converters = { path = "../../../converters" }
azure_cosmos = { git = "https://github.com/Azure/azure-sdk-for-rust/", rev = "5bd06be7cb60f52696b0f8a2982ac173c9486c32" }
azure_core = { git = "https://github.com/Azure/azure-sdk-for-rust/", rev = "5bd06be7cb60f52696b0f8a2982ac173c9486c32" }
azure_storage = { git = "https://github.com/Azure/azure-sdk-for-rust/", rev = "5bd06be7cb60f52696b0f8a2982ac173c9486c32" }
reqwest = "0.11.3"
serde = "1.0.125"
lazy_static = "1.4.0"
itertools = "0.10.0"

#tokio = { version = "1", features = ["full"] }
tokio = { version = "1.11.0", features = ["full"] }
futures-util = { version = "0.3.14", features = ["sink"] }
md5 = "0.7.0"
bytes = "1.0.1"
mysql = "20.1.0"
diesel = { version = "1.4.6", features = ["mysql", "64-column-tables", "r2d2"] }
paste = "1.0.5"
base64 = "0.13.0"
