[package]
name = "macros"
version = "0.1.0"
authors = ["Stock84-dev <leontk8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.9"
syn = { version = "1.0", features = ["full"] }
convert_case = "0.4.0"
proc-macro2 = "1.0.34"
