[package]
name = "matrix_core"
version = "0.1.0"
authors = ["Stock84-dev <leontk8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
ASSERT = ["test"]
test = ["merovingian/test", "iaas/test"]
#test = ["merovingian/test", "operator/test"]

[dependencies]
mouse = { path = "../mouse" }
opencl = { path = "../opencl" }
merovingian = { path = "../merovingian" }
config = { path = "../config" }
iaas = { path = "../iaas" }
macros = { path = "../macros" }
nebuchadnezzar_core = { path = "../nebuchadnezzar/nebuchadnezzar_core" }
bitmex = { path = "../nebuchadnezzar/apis/bitmex" }
#residual_self_image = { path = "../residual_self_image" }
# cannot use latest because bitmex-rs is throwing runtime error
tokio = { version = "1.11.0", features = ["full"] }
# tokio = { version = "0.2.11", features = ["fs", "io-util", "rt-core"] }
chrono = "0.4.19"
futures = "0.3.14"
serde_json = "1.0.64"
log = "0.4.14"
base64 = "0.13.0"
async-std = { version = "1.9.0", features = ["unstable"] }
async-trait = "0.1"
serde = "1.0.125"
bitflags = "1.2.1"
fern = { version = "0.6.0", features = ["colored"] }
serde_derive = "1.0.125"
bincode = "1.3.3"
byteorder = "1.4.3"
multiqueue = "0.3.2"
tungstenite = "0.13.0"
ocl = { path = "../../deps/ocl/ocl" }
lazy_static = "1.4.0"
thiserror = "1.0.24"
anyhow = "1.0.40"
ctrlc = "3.1.9"
#clap-v3 = "3.0.0-beta.1"
clap = "3.0.0-beta.2"
# clap = { version = "2.33.3", features = ["derive", "suggestions", "color"] }
num-traits = "0.2.14"
sorted-vec = "0.5.2"
logging_timer = "1.0.0"
downcast-rs = "1.2.0"
async-timer = "0.7.4"
futures-util = "0.3.14"
rust_decimal = { path = "../../deps/rust-decimal", features = ["serde-str"] }
stream-flatten-iters = "0.2.0"
diesel = { version = "1.4.6", features = ["mysql", "64-column-tables", "r2d2"] }
async-compression = { version = "0.3.7", features = ["tokio", "lzma", "zstd"] }
path-slash = "0.1.4"
fs3 = "0.5.0"
rand = "0.8.3"
getset = "0.1.1"
#async-recursion = "0.3.2"
tokio-tungstenite = { version = "0.14.0", features = ["rustls-tls"] }

[dev-dependencies]
test_helper = { path = "../test_helper" }
