[package]
name = "merovingian"
version = "0.1.0"
authors = ["Stock84-dev <leontk8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
test = []

[dev-dependencies]
test_helper = { path = "../test_helper" }
tempfile = "3.2.0"

[dependencies]
bevy = { path = "../bevy" }
mouse = { path = "../mouse" }
macros = { path = "../macros" }
graph = { path = "../graph" }
uuid = { path = "../../deps/uuid", features = ["v4", "serde"] }
speedy = { path = "../../deps/speedy" }
tokio = { version = "1.11.0", features = ["full"] }
async-compression = { version = "0.3.7", features = ["tokio", "lzma", "zstd"] }
log = "0.4.14"
serde = "=1.0.125"
bincode = "1.3.3"
futures = "0.3.14"
clap = { version = "=3.0.0-beta.2", features = ["derive"] }
num_enum = "0.5.1"
bitflags = "=1.2.1"
thiserror = "1.0.24"
pin-project-lite = "0.2.6"
lazy_static = "1.4.0"
derive-new = "0.5.9"
async-trait = "0.1"
static_assertions = "1.1.0"
tokio-tungstenite = { version = "0.14.0", features = ["rustls-tls"] }
xz2 = "0.1.6"
ordered-float = { version = "2.1.1", features = ["serde"] }
base64 = "0.13.0"
chrono = "0.4.19"
num-integer = "0.1.44"
rayon = "1.5.1"
itertools = "0.10.0"
memmap2 = "0.3.1"
zstd = "0.7.0"
zigzag = "0.1.0"
bytemuck = { version = "1.4", features = [ "derive" ] }
