[package]
name = "morpheus"
version = "0.2.0"
authors = ["Stock84-dev <leontk8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["ASSERT"]
ASSERT = ["matrix_core/ASSERT"]
test = ["matrix_core/test"]

[dependencies]
mouse = { path = "../mouse", features = ["test"] }
opencl = { path = "../opencl" }
construct_core = { path = "../construct_core", features = ["test"] }
matrix_core = { path = "../matrix_core", optional = true }
#residual_self_image = { path = "../residual_self_image" }
config = { path = "../config" }
iaas = { path = "../iaas" }
merovingian = { path = "../merovingian"}
tokio = { version = "1.11.0", features = ["full"] }
clap = "3.0.0-beta.2"
multiqueue = "0.3.2"
bincode = "1.3.3"
half = { version = "1.7.1", features = ["serde"] }
chrono = "0.4.19"
