[package]
name = "mouse"
version = "0.1.0"
authors = ["Stock84-dev <leontk8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
test = []

[dependencies]
rust_decimal = { path = "../../deps/rust-decimal", features = ["serde-float"] }
speedy = { path = "../../deps/speedy" }
tokio = { version = "1.11.0", features = ["full"] }
chrono = { version = "0.4.19", features = ["serde"] }
log = "0.4.14"
fern = { version = "0.6.0", features = ["colored"] }
anyhow = "1.0.40"
failure = "0.1.8"
async-trait = "0.1"
num-traits = "0.2.14"
serde-value = "0.7.0"
serde = { version = "1.0.125", features = ["derive"] }
spmc = "0.3.0"
lazy_static = "1.4.0"
rust_decimal_macros = "1.11.0"
ctrlc = "3.1.9"
futures-util = { version = "0.3.14", features = ["sink"] }
pin-project-lite = "0.2.6"
url = "2.2.1"
tokio-tungstenite = { version = "0.14.0", features = ["rustls-tls"] }
count_tts = "0.2.0"
half = { version = "1.7.1", features = ["serde", "num-traits", "zerocopy"] }
bytemuck = { version = "1.4", features = [ "derive" ] }
derive-new = "0.5"
itertools = "0.10.0"
minipre = "0.2.0"
thiserror = "1.0.24"
rand = "0.8.4"
derive_more = "0.99.16"
indexmap = { version = "1.7.0", features = ["rayon"] }
fxhash = "0.2.1"
rayon = "1.5.1"
bitflags = "=1.2.1"
path-slash = "0.1.4"
parking_lot = "0.11.2"
static_assertions = "1.1.0"
downcast-rs = "1.2.0"
dyn-clone = "1.0.4"
smallbox = { version = "0.8", features = ["coerce"] }
smallvec = "1.6.1"
priomutex = "0.3.1"
smallstr = "0.2.0"
