[package]
name = "tank"
version = "0.2.0"
authors = ["Stock84-dev <leontk8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mouse = { path = "../mouse" }
bevy = { path = "../bevy" }
config = { path = "../config" }
construct_core = { path = "../construct_core" }
dozer = { path = "../dozer" }
merovingian = { path = "../merovingian" }
opencl = { path = "../opencl" }
speedy = { path = "../../deps/speedy" }
bevy_mod_debugdump = { path = "../../deps/bevy_mod_debugdump", default-features = false }
#tracing-flame = { path = "../../deps/tracing/tracing-flame" }
ordered-float = "2.8.0"
wgpu_glyph = "0.15.1"
wgpu = { version = "0.11.0", features = ["trace"] }
stretch = "0.3.2"
rgb = { version = "0.8.27", features = ["bytemuck"] }
bytemuck = { version = "1.4", features = [ "derive" ] }
arrayvec = "0.7.1"
glyph_brush = "0.7"
winit = "0.25"
derive_more = "0.99.16"
imgui = "0.8.0"
imgui-winit-support = "0.8.0"
imgui-wgpu = "0.18.0"
derive_setters = "0.1.5"
static_assertions = "1.1.0"
tokio = { version = "1.11.0", features = ["full"] }
strum_macros = "0.22.0"
strum = "0.21.0"
futures-util = { version = "0.3.14", features = ["sink"] }
pin-project = "1.0.8"
lazy_static = "1.4.0"
futures-lite = "1.12.0"
inferno = "0.10.7"
tracing = "0.1.12"
tracing-subscriber = "0.2.3"
tracing-tracy = "0.7.0"
gensym = "0.1.0"
itertools = "0.10.0"
thiserror = "1.0.24"
derive-new = "0.5"
bincode = "1.3.3"
rand = "0.8.4"
glyph_brush_layout = "0.2.3"
float-pretty-print = "0.1.1"
ieee754 = "0.2"
bitvec = "0.22.3"
zigzag = "0.1.0"
zstd = "0.7.0"
