[package]
name = "zion_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
quote = "1.0.9"
syn = { version = "1.0", features = ["full"] }
proc-macro2 = "1.0.34"
derive-syn-parse = "0.1.5"
