[package]
name = "nebuchadnezzar_core"
version = "0.1.0"
authors = ["Stock84-dev <leontk8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
schema = ["Inflector", "bitflags"]

[dependencies]
rust_decimal = { path = "../../../deps/rust-decimal", features = ["serde-float"] }
uuid = { path = "../../../deps/uuid", features = ["serde"] }
anyhow = "1.0.40"
reqwest = { version = "0.11.3", features = ["json"] }
serde = { version = "1.0.125", features = ["derive"] }
async-trait = "0.1"
serde_json = "1.0.64"
chrono = { version = "0.4.19", features = ["serde"] }
ring = "0.16.20"
hex = "0.4.3"
thiserror = "1.0.24"
Inflector = { version = "0.11.4", optional = true }
bitflags = { version = "1.2.1", optional = true }
sorted-vec = "0.5.2"
log = "0.4.14"

#merovingian = { path = "../../merovingian" }
tokio = { version = "1.11.0", features = ["full"] }
tokio-tungstenite = { version = "0.14.0", features = ["rustls-tls"] }
futures-util = { version = "0.3.14", features = ["sink"] }
#pin-project-lite has a bug, using this instead
pin-project = "1.0.8"
url = "2.2.1"
