[package]
name = "birake"
version = "0.1.0"
authors = ["Stock84-dev <leontk8@gmail.com>"]
edition = "2018"

[features]
schema = ["nebuchadnezzar_core/schema"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nebuchadnezzar_core = { path = "../../nebuchadnezzar_core" }
serde = { version = "1.0.104", features = ["derive"] }

[dev-dependencies]
nebuchadnezzar_core = { path = "../../nebuchadnezzar_core", features = ["schema"] }
